--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@liveblocks/client": "^0.14.0",
+    "@liveblocks/react": "^0.14.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
